@@ -216,3 +216,6 @@ issue 232: RenderingHelper's alpha on/off functions were not working correctly; 
 issue 233: BoxModel's rendering code was not rendering vertices <-> texture correctly; fixed on 11.07.0202 by uuk
     causing issue 129: some faces of fences and walls are not rendered with texture; fixed on 11.07.2020 by uuk
 issue 234: active dimension is not reset when changing world; fixed on 11.07.2020 by uuk
+issue 236: EntityModelGenerator was not parsing states correctly; fixed on 12.07.2020 by uuk
+issue 237: Chunk deserializer was not setting is_ready to True leading into entities not rendering; fixed on 12.07.2020
+           by uuk
