@@ -164,3 +164,5 @@ issue 230: [similar to former issue 9]
 
 issue 235:
     bug: tools are CONSUMED when using them
+
+[236-237]
