@@ -48,22 +48,22 @@ class Entity(mcpython.event.Registry.IRegistryContent):
         for moder: you SHOULD implement an custom constructor which set the bellow values to an "good" value
         """
         self.dimension = G.world.get_active_dimension() if dimension is None else dimension
-        self.__position = (0, 0, 0)
-        self.rotation = (0, 0, 0)
+        self.unsafe_position = (0, 0, 0)  # todo: move to nbt
+        self.rotation = (0, 0, 0)  # todo: move to nbt
         self.inventories = {}
-        self.harts = 0
-        self.chunk = None if self.dimension is None else self.dimension.get_chunk_for_position(self.__position)
+        self.harts = 0  # todo: move to nbt
+        self.chunk = None if self.dimension is None else self.dimension.get_chunk_for_position(self.unsafe_position)
         self.uuid = uuid.uuid4()
-        self.movement = (0, 0, 0)
 
         self.entity_height = 0  # the height of the entity, for positioning the child entity
 
-        self.parent = None  # the entity this is riding
-        self.child = None  # the entity this is ridden by
+        self.parent = None  # the entity this is riding todo: move into nbt
+        self.child = None  # the entity this is ridden by  todo: move into nbt
 
-        self.nbt_data = {}  # dict holding entity data, automatically saved & loaded, when loading, data is put ontop of the existing dict
+        self.nbt_data = {"motion": (0, 0, 0), "invulnerable": False}  # dict holding entity data, automatically saved & loaded, when loading, data is put ontop of the existing dict
 
     def __del__(self):
+        if not hasattr(self, "chunk"): return
         del self.chunk
 
     def __str__(self):
@@ -71,7 +71,7 @@ class Entity(mcpython.event.Registry.IRegistryContent):
 
     # system for moving
 
-    def get_position(self): return self.__position
+    def get_position(self): return self.unsafe_position
 
     def set_position(self, position: tuple):
         if type(position) not in (tuple, list, set):
@@ -82,8 +82,14 @@ class Entity(mcpython.event.Registry.IRegistryContent):
 
     position = property(get_position, set_position)
 
+    def get_motion(self): return self.nbt_data.setdefault("motion", (0, 0, 0))
+
+    def set_motion(self, motion: tuple): self.nbt_data["motion"] = motion
+
+    movement = motion = property(get_motion, set_motion)
+
     # only for some small use-cases. WARNING: will  N O T  do any internal handling for updating the position
-    def set_position_unsafe(self, position: tuple): self.__position = position
+    def set_position_unsafe(self, position: tuple): self.unsafe_position = position
 
     def teleport(self, position, dimension=None, force_chunk_save_update=False):
         """
@@ -99,7 +105,7 @@ class Entity(mcpython.event.Registry.IRegistryContent):
         if dimension is None: dimension_id = before_dim if before_dim is not None else 0
         else: dimension_id = dimension
         dimension = G.world.get_dimension(dimension_id)
-        self.__position = position
+        self.unsafe_position = position
         if dimension is None: return
         sector_after = mcpython.util.math.positionToChunk(self.position)
         if sector_before != sector_after or before_dim != dimension_id or force_chunk_save_update:
@@ -107,6 +113,7 @@ class Entity(mcpython.event.Registry.IRegistryContent):
                 self.chunk.entities.remove(self)
             self.chunk = dimension.get_chunk_for_position(self.position)
             self.chunk.entities.add(self)
+            print("writing {} into {}".format(self, self.chunk))
 
     # interaction functions
 
@@ -119,10 +126,14 @@ class Entity(mcpython.event.Registry.IRegistryContent):
 
     def kill(self, drop_items=True, kill_animation=True):
         """
-        called to kill the entity [remove the entity from world]
+        Called to kill the entity [remove the entity from world]
+        THIS IS THE FINAL REMOVAL METHOD. THIS DOES NOT HAVE MUCH CHECKS IF IT SHOULD BE ABLE TO BE KILLED!
+
+        Is not affected by nbt-tag "invulnerable". Must be handled separately.
         :param drop_items: if items should be dropped
         :param kill_animation: if the kill animation should be played
-        todo: drop items
+        todo: drop items if selected
+        todo: play kill animation if selected
         """
         if self.chunk is not None and self in self.chunk.entities:
             self.chunk.entities.remove(self)
@@ -131,11 +142,12 @@ class Entity(mcpython.event.Registry.IRegistryContent):
 
     def pick_up(self, itemstack: mcpython.gui.ItemStack.ItemStack) -> bool:
         """
-        let the entity pick up an item and insert it into its inventory
+        Let the entity pick up an item and insert it into its inventory
         :param itemstack: the itemstack to use
         :return: if it was successful or not
         for moder: see world/player.py as an example how this could work
         """
+        return False
 
     def damage(self, damage, reason=None):
         """
