@@ -19,7 +19,7 @@ class EntityHandler:
 
     def add_entity(self, name, position, *args, dimension=None, uuid=None, check_summon=False, **kwargs):
         if dimension is None: dimension = G.world.get_active_dimension()
-        if type(dimension) == int: dimension = G.world.dimensions[dimension]
+        if type(dimension) in (str, int): dimension = G.world.get_dimension(dimension)
         if name not in self.registry.registered_object_map:
             raise ValueError("unknown entity type name: '{}'".format(name))
         entity = self.registry.registered_object_map[name]
@@ -43,6 +43,12 @@ class EntityHandler:
                     child.position = (x, y, z)
                     y += child.entity_height
                     child = child.child
+
+            if not entity.nbt_data["invulnerable"] and entity.position[1] < -1000:  # check if it has fallen to far down so it should be killed
+                entity.kill()
+
+            # todo: add collision & falling system
+            # todo: add max entities standing in one space handler
 
 
 G.entityhandler = EntityHandler()
