@@ -732,7 +732,7 @@ G.modloader = ModLoader()
 # this is needed as this depends on above but also above on the import
 import mcpython.mod.ModMcpython
 import mcpython.mod.ConfigFile
-from mcpython.datagen.mcpython import recipes, textures
+from mcpython.datagen.mcpython import recipes, textures, entity
 
 
 @G.modloader("minecraft", "special:exit")
